--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  background-color: darkkhaki;
   height: 100dvh;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -20,6 +21,8 @@ header {
   grid-area: header;
   background-color: darkslategray;
   border-bottom: 2px solid darkolivegreen;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr 2fr;
@@ -83,10 +86,22 @@ footer {
 }
 
 #menu {
-  height: 200px;
-  width: 200px;
+  height: 75%;
+  width: 50%;
   justify-self: center;
   align-self: center;
-  grid-column: 2;
+  grid-column: 2/4;
+  grid-row: 1/3;
   background-color: white;
+  border-radius: 75px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  gap: 16px;
+  align-items: center;
+  justify-items: center;
+}
+#menu p {
+  display: block;
+  font-size: 32px;
 }/*# sourceMappingURL=style.css.map */
