--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,7 @@ html {
 
 
 body {
+    background-color: darkkhaki;
     height: 100dvh;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -31,6 +32,9 @@ header {
     grid-area: header;
     background-color: darkslategray;
     border-bottom: 2px solid darkolivegreen;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    
 
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -106,11 +110,25 @@ footer {
 
 #menu {
     
-    height: 200px;
-    width: 200px;
+    height: 75%;
+    width: 50%;
     justify-self: center;
     align-self: center;
-    grid-column: 2;
+    grid-column: 2/4;
+    grid-row: 1/3;
     background-color: white;
+    border-radius: 75px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    gap: 16px;
+    align-items: center;
+    justify-items: center;
+
+    p {
+        display: block;
+        font-size: 32px;
+    }
 
 }
