--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
   align-items: center;
   justify-items: center;
 }
-header #title {
+header #titleheader {
   font-size: 32px;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -86,16 +86,17 @@ footer {
 }
 
 #menu {
-  height: 75%;
-  width: 50%;
+  height: 150%;
+  width: 25%;
+  z-index: 1;
   justify-self: center;
   align-self: center;
-  grid-column: 2/4;
-  grid-row: 1/3;
+  grid-column: 1/3;
+  grid-row: 3/6;
   background-color: white;
   border-radius: 75px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  display: grid;
+  display: none;
   grid-template-rows: repeat(6, 1fr);
   gap: 16px;
   align-items: center;
@@ -104,4 +105,8 @@ footer {
 #menu p {
   display: block;
   font-size: 32px;
+}
+
+#menu.grid {
+  display: grid;
 }/*# sourceMappingURL=style.css.map */
