--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ header {
     align-items: center;
     justify-items: center;
 
-    #title {
+    #titleheader {
         font-size: 32px;
         font-family: "Roboto", sans-serif;
         font-weight: 400;
@@ -86,7 +86,7 @@ main {
     grid-auto-rows: 1fr;
     justify-items: center;
     align-items: center;
-    
+
     .card {
         width: 75%;
         height: 90%;
@@ -110,17 +110,18 @@ footer {
 
 #menu {
     
-    height: 75%;
-    width: 50%;
+    height: 150%;
+    width: 25%;
+    z-index: 1;
     justify-self: center;
     align-self: center;
-    grid-column: 2/4;
-    grid-row: 1/3;
+    grid-column: 1/3;
+    grid-row: 3/6;
     background-color: white;
     border-radius: 75px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
-    display: grid;
+    display: none;
     grid-template-rows: repeat(6, 1fr);
     gap: 16px;
     align-items: center;
@@ -131,4 +132,9 @@ footer {
         font-size: 32px;
     }
 
+
+}
+
+#menu.grid {
+    display: grid;
 }
