--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,28 @@ body {
     "footer footer"
 }
 
+button {
+        
+    height: 50px;
+    width: 50px;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px darkslategray;
+    cursor: pointer;
+    transition: all 0.2s ease;
+
+
+}
+
+#deleteBtn {
+
+    grid-column: 3;
+    justify-self: center;
+    align-self: center;
+
+    background-color: red;
+}
+
 header {
     grid-area: header;
     background-color: darkslategray;
@@ -50,30 +72,25 @@ header {
         grid-column: 2/3;
     }
 
-    button {
+
+    #addbook {
         grid-column: 1;
         grid-row: 2;
 
         background-color:#AFE1AF;
-        height: 50px;
-        width: 50px;
-        border: none;
-        border-radius: 50%;
-        box-shadow: 0 2px 4px darkslategray;
-        cursor: pointer;
-        transition: all 0.2s ease;
-
 
     }
-    button:hover{
+
+    #addbook:hover{
         background: rgb(30, 185, 38);
     }
 
-    button:active {
+    #addbook:active {
         box-shadow: 0 0 2px darkslategray;
         transform: translateY(2px);
 
     }
+
 }
 
 main {
@@ -92,11 +109,41 @@ main {
         height: 90%;
         border: 1px solid whitesmoke;
         background-color: darkslategray;
+        border-radius: 30px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: repeat(5, 1fr);
 
         .data {
             color: whitesmoke;
+            grid-column: 2;
+            align-self: flex-start;
+            justify-self: center;
+        }
+
+        #bookTitle {
+            grid-row: 2;
+        }
+
+        #bookAuthor {
+            grid-row: 3;
+        }
+        #bookPages {
+            grid-row: 4;
+        }
+
+        #bookRead {
+            grid-row: 5;
         }
     }
+}
+
+#buttonszone {
+    display: flex;
+    gap: 16px;
 }
 
 footer {
@@ -111,7 +158,7 @@ footer {
 #menu {
     
     height: 150%;
-    width: 25%;
+    width: 20%;
     z-index: 1;
     justify-self: center;
     align-self: center;
