--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto";
 }
 
 html {
@@ -27,48 +28,6 @@ button {
   transition: all 0.2s ease;
 }
 
-input[type=checkbox] {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-}
-
-label {
-  cursor: pointer;
-  text-indent: -9999px;
-  width: 200px;
-  height: 100px;
-  background: grey;
-  display: block;
-  border-radius: 100px;
-  position: relative;
-}
-
-label:after {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  width: 90px;
-  height: 90px;
-  background: #fff;
-  border-radius: 90px;
-  transition: 0.3s;
-}
-
-input:checked + label {
-  background: #bada55;
-}
-
-input:checked + label:after {
-  left: calc(100% - 5px);
-  transform: translateX(-100%);
-}
-
-label:active:after {
-  width: 130px;
-}
-
 .deleteBtn {
   grid-column: 3;
   justify-self: center;
@@ -78,7 +37,7 @@ label:active:after {
 
 header {
   grid-area: header;
-  background-color: darkslategray;
+  background-color: #464D77;
   border-bottom: 2px solid darkolivegreen;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -89,10 +48,12 @@ header {
   justify-items: center;
 }
 header #titleheader {
-  font-size: 32px;
+  font-size: 2.5rem;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   grid-column: 2/3;
+  grid-row: 2;
+  align-self: baseline;
 }
 header #addbook {
   grid-column: 1;
@@ -109,7 +70,7 @@ header #addbook:active {
 
 main {
   grid-area: books;
-  background: darkkhaki;
+  background: #F4EDED;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -122,7 +83,7 @@ main .card {
   width: 75%;
   height: 90%;
   border: 1px solid whitesmoke;
-  background-color: darkslategray;
+  background-color: #877666;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: grid;
@@ -135,17 +96,18 @@ main .card .data {
   align-self: flex-start;
   justify-self: center;
 }
-main .card #bookTitle {
+main .card .bookTitle {
   grid-row: 2;
 }
-main .card #bookAuthor {
+main .card .bookAuthor {
   grid-row: 3;
 }
-main .card #bookPages {
+main .card .bookPages {
   grid-row: 4;
 }
-main .card #bookRead {
+main .card .bookRead {
   grid-row: 5;
+  grid-column: 2;
 }
 
 #buttonszone {
@@ -155,7 +117,7 @@ main .card #bookRead {
 
 footer {
   grid-area: footer;
-  background-color: darkslategray;
+  background-color: #464D77;
   border-top: 2px solid darkolivegreen;
   display: flex;
   justify-content: center;
@@ -183,7 +145,6 @@ footer {
   display: block;
   font-size: 32px;
 }
-
 #menu.grid {
   display: grid;
 }/*# sourceMappingURL=style.css.map */
