--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 html {
   height: 100dvh;
+  --color-title: #0073BF;
+  --color-border: #00406c;
 }
 
 body {
@@ -37,8 +39,8 @@ button {
 
 header {
   grid-area: header;
-  background-color: #464D77;
-  border-bottom: 2px solid darkolivegreen;
+  background-color: #001a2c;
+  border-bottom: 2px solid var(--color-border);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   display: grid;
@@ -54,14 +56,15 @@ header #titleheader {
   grid-column: 2/3;
   grid-row: 2;
   align-self: baseline;
+  color: var(--color-title);
 }
 header #addbook {
   grid-column: 1;
   grid-row: 2;
-  background-color: #AFE1AF;
+  background-color: #074500;
 }
 header #addbook:hover {
-  background: rgb(30, 185, 38);
+  background: #0d8000;
 }
 header #addbook:active {
   box-shadow: 0 0 2px darkslategray;
@@ -70,7 +73,7 @@ header #addbook:active {
 
 main {
   grid-area: books;
-  background: #F4EDED;
+  background: #002945;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -82,8 +85,8 @@ main {
 main .card {
   width: 75%;
   height: 90%;
-  border: 1px solid whitesmoke;
-  background-color: #877666;
+  border: 1px solid var(--color-border);
+  background-color: #3A5160;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: grid;
@@ -113,15 +116,17 @@ main .card .bookRead {
 #buttonszone {
   display: flex;
   gap: 16px;
+  grid-row: 6;
 }
 
 footer {
   grid-area: footer;
-  background-color: #464D77;
-  border-top: 2px solid darkolivegreen;
+  background-color: #001a2c;
+  border-top: 2px solid #00406c;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--color-title);
 }
 
 #menu {
@@ -132,19 +137,85 @@ footer {
   align-self: center;
   grid-column: 1/3;
   grid-row: 3/6;
-  background-color: white;
+  background-color: #5D6870;
   border-radius: 75px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: none;
   grid-template-rows: repeat(6, 1fr);
-  gap: 16px;
   align-items: center;
   justify-items: center;
 }
 #menu p {
   display: block;
-  font-size: 32px;
+  font-size: 1.75rem;
+  color: whitesmoke;
 }
+#menu .form_label {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2rem;
+  margin-left: 5rem;
+  margin-top: -4.2rem;
+  display: block;
+  transition: all 0.3s;
+  transform: translateY(0rem);
+  color: whitesmoke;
+}
+#menu .form_input {
+  font-family: "Roboto", sans-serif;
+  color: #333;
+  font-size: 1.2rem;
+  margin: 0 auto;
+  padding: 0.5rem 2rem;
+  border-radius: 25px;
+  background-color: rgb(255, 255, 255);
+  width: 60%;
+  display: block;
+  border: none;
+  position: relative;
+}
+#menu .form_input:focus {
+  outline: none;
+  border: 2px solid var(--color-border);
+}
+#menu .form_input::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 10px;
+  background: red;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+  transform-origin: bottom right;
+}
+#menu .form_input:focus::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+#menu .form_input:-moz-placeholder-shown + .form_label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(2rem);
+}
+#menu .form_input:placeholder-shown + .form_label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(2rem);
+}
+#menu #titlediv {
+  grid-row: 2;
+}
+#menu #authordiv {
+  grid-row: 3;
+}
+#menu #pagesdiv {
+  grid-row: 4;
+}
+#menu #readdiv {
+  grid-row: 5;
+}
+
 #menu.grid {
   display: grid;
 }/*# sourceMappingURL=style.css.map */
