--- a/style.scss
+++ b/style.scss
@@ -2,12 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
+}
+
+// Font face for title
+
+@font-face {
+    font-family: "RatherlafiaForghive";
+    src: url(RatherlafiaForghive-BWDZl.woff) format(woff);
 }
 
 html {
     height: 100dvh;
-    --color-title : #0073BF;
+    --color-title : #87CFFF;
     --color-border : #00406c;
 }
 
@@ -32,55 +39,157 @@ body {
     "footer footer"
 }
 
-button {
-        
-    height: 50px;
-    width: 50px;
-    border: none;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px darkslategray;
-    cursor: pointer;
-    transition: all 0.2s ease;
+// CSS for buttons. WIP = Need to work on hovering .deleteBtn to make backgroundcolor red ( Specificties problem ? )
 
+.generalBtns, .deleteBtn {
+        
+    
+    display: inline-block;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    color: #fff;
+    font-weight: 500;
+    border-radius: 4px;
+    font-size: 14px;
+    height: 30px;
+    padding: 0px 15px;
+    text-shadow: rgb(0 0 0 / 25%) 0px 3px 8px;
+    background: linear-gradient(92.88deg, rgb(69, 94, 181) 9.16%, rgb(86, 67, 204) 43.89%, rgb(103, 63, 215) 64.72%);
+    transition: all 0.5s ease 0s;
+    
+    &.generalBtns:hover{
+        box-shadow: rgb(80 63 205 / 50%) 0px 1px 40px;
+        transition: all 0.1s ease 0s;
+    }
 
 }
 
-// adding pure css toggle switch to try // 
-
-
-.deleteBtn {
+#cardzone [id^="deleteBtn"] {
 
     grid-column: 3;
     justify-self: center;
     align-self: center;
 
-    background-color: red;
+    &:hover {
+        background-color: red !important;
+    }
 }
+
+// CSS for toggle read/unread
+
+.toggle {
+    --width: 80px;
+    --height: calc(var(--width) / 3);
+
+    position: relative;
+    display: inline-block;
+    width: var(--width);
+    height: var(--height);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+    border-radius: var(--height);
+    background-color: white;
+    cursor: pointer;
+
+    input {
+        display: none;
+
+        &:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        &:checked + .slider::before {
+            transform: translateX(calc(var(--width) - var(--height)))
+        }
+
+        &:checked~.labels::after {
+            opacity: 0;
+        }
+
+        &:checked~.labels::before {
+            opacity: 1;
+        }
+    }
+
+    .slider {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: var(--height);
+        background-color: #ccc;
+        transition: all 0.4s ease-in-out;
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: calc(var(--height));
+            height: calc(var(--height));
+            border-radius: calc(var(--height) /2);
+            background-color: #fff;
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+            transition: all 0.4s ease-in-out;
+
+        }
+    }
+
+    .labels {
+        position: absolute;
+        top: 8px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 10px;
+        font-family: sans-serif;
+        transition: all 0.4s ease-in-out;
+
+        &::after {
+            content: attr(data-off);
+            position: absolute;
+            right: 5px;
+            color: #4d4d4d;
+            opacity: 1;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+            transition: all 0.4s ease-in-out;
+        }
+
+        &::before {
+            content: attr(data-on);
+            position: absolute;
+            left: 5px;
+            opacity: 0;
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.4);
+            transition: all 0.4s ease-in-out;
+        }
+    }
+}
+
 
 header {
     grid-area: header;
     background-color: #001a2c;
     border-bottom: 2px solid var(--color-border);
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
     
 
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 2fr;
+    
     align-items: center;
     justify-items: center;
 
     #titleheader {
-        font-size: 2.5rem;
-        font-family: "Roboto", sans-serif;
+        font-size: 2.7rem;
         font-weight: 400;
+        font-family: "RatherlafiaForghive", sans-serif;
+        color: var(--color-title);
 
         grid-column: 2/3;
         grid-row: 2;
         align-self: baseline;
 
-        color: var(--color-title)
     }
 
 
@@ -195,6 +304,7 @@ footer {
     }
 
     // Not my code, but reworked with chatGPT to change the border color ( wasn't possible due to initial borderbottom declaration )
+    // CSS for input layout
     .form_label {
         font-family: 'Roboto', sans-serif;
         font-size: 1.2rem;
@@ -252,6 +362,8 @@ footer {
         transform: translateY(2rem);
     }
 
+    // ID belows are necessary only to place items
+
     #titlediv {
         grid-row: 2;
     }
@@ -268,6 +380,8 @@ footer {
         grid-row: 5;
     }
 }
+
+// For switch between display:none and display grid for <div> menu
 
 #menu.grid {
     display: grid;
